src/test/deca/syntax/valid/created/test_castEx.deca
//Description
//  test du cast dans l'arbre
//
//Résultat
//  ok

{
    int x;
    x = (int) (4);
}