src/test/deca/syntax/invalid/created/test_invalid_garbage.deca
// Description:
//    Code valide suivi de déchets après l'accolade fermante du main.


{
    println("Main fini");
}

int x = 0; // Interdit hors classe ou main
blabla     // Interdit